[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blnetwork"
version = "0.1.1"
description = "Behavior Learning (BL): Learning Hierarchical Optimization Structures from Data"
readme = "README.md"
requires-python = ">=3.10.9"
license = { file = "LICENSE" }
authors = [
  { name = "Yue Liang", email = "yue.liang@student.uni-tuebingen.de" }
]


dependencies = [
  "torch>=2.2",
  "numpy>=1.26",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/MoonYLiang/Behavior-Learning"
Issues = "https://github.com/MoonYLiang/Behavior-Learning/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["blnetwork*"]

exclude = ["__pycache__*"]